--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Mono&family=Ubuntu:wght@300;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <div class="container">
         <h1>Dark Joke Generator</h1>
-        <p>No one is safe...</p>
     
         <div id="joke"></div>
         <button onclick="getJoke()">Into the Abyss</button>
