Added social share info

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=PT+Mono&family=Ubuntu:wght@300;700&display=swap" rel="stylesheet">
+    <link href="" rel="stylesheet">
+
+    <!-- Customised Social Sharing -->
+    <meta property="og:title" content="Dark Joke Generator">
+    <meta property="og:description" content="You may or may not regret finding this.">
+    <meta property="og:image" content="https://github.com/theLadEli/qa-course/blob/main/Assets/Image%20Embed.png?raw=true">
+
 </head>
 <body>
 
