Updated social share image

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Customised Social Sharing -->
     <meta property="og:title" content="Dark Joke Generator">
     <meta property="og:description" content="You may or may not regret finding this.">
-    <meta property="og:image" content="https://github.com/theLadEli/qa-course/blob/main/Assets/Image%20Embed.png?raw=true">
+    <meta property="og:image" content="https://github.com/theLadEli/dark-joke-generator/blob/main/assets/social-share-image.jpg?raw=true">
 
 </head>
 <body>
