--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <button onclick="getJoke()">Into the Abyss</button>
 	</div>
 
-    <p class="disclaimer"><b>Disclaimer:</b> For cancellation purposes, I take no resposibility for any jokes that appear on this site. These are not my jokes, i am sourcing them from a public api called jokeapi.dev which allows public joke submissions. Use the generator at your own will and don't blame me for getting trigged.</p>
+    <p class="disclaimer"><b>Disclaimer:</b> For cancellation purposes, I take no resposibility for any jokes that appear on this site. These are not my jokes, i am sourcing them from a public api called jokeapi.dev which allows public joke submissions. Use the generator at your own will and don't blame me for getting triggered.</p>
 <script src="scripts.js"></script>
 </body>
 </html>
